add product wrapper grid section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6142,6 +6142,10 @@ code[class*="language-"],
   min-width: -moz-fit-content;
   min-width: fit-content;
 }
+.min-w-max {
+  min-width: -moz-max-content;
+  min-width: max-content;
+}
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -6680,6 +6684,9 @@ code[class*="language-"],
 .border-t {
   border-top-width: 1px;
 }
+.border-solid {
+  border-style: solid;
+}
 .border-dashed {
   border-style: dashed;
 }
@@ -6849,6 +6856,9 @@ code[class*="language-"],
 .bg-opacity-\[0\.45\] {
   --tw-bg-opacity: 0.45;
 }
+.bg-clip-padding {
+  background-clip: padding-box;
+}
 .bg-bottom {
   background-position: bottom;
 }
@@ -6863,6 +6873,9 @@ code[class*="language-"],
 }
 .bg-top {
   background-position: top;
+}
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 .fill-content {
   fill: var(--content);
@@ -6955,9 +6968,6 @@ code[class*="language-"],
 }
 .\!p-2 {
   padding: 0.5rem !important;
-}
-.\!p-\[15px\] {
-  padding: 15px !important;
 }
 .p-0 {
   padding: 0px;
@@ -7254,6 +7264,10 @@ code[class*="language-"],
 .py-card-gap {
   padding-top: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
   padding-bottom: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
+}
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
 }
 .\!pb-0 {
   padding-bottom: 0px !important;
@@ -7643,6 +7657,10 @@ code[class*="language-"],
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -7788,6 +7806,9 @@ code[class*="language-"],
 }
 .ease-linear {
   transition-timing-function: linear;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 [dir=rtl] .pl-0 {
   padding-left: unset;
@@ -9998,11 +10019,19 @@ code[class*="language-"],
 .focus\:border-primary:focus {
   border-color: rgba(var(--primary),1);
 }
+.focus\:border-blue-600:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
 .focus\:bg-primary:focus {
   background-color: rgba(var(--primary),1);
 }
 .focus\:bg-primary-light:focus {
   background-color: var(--primary-light);
+}
+.focus\:bg-white:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .focus\:px-2:focus {
   padding-left: 0.5rem;
@@ -10011,6 +10040,10 @@ code[class*="language-"],
 .focus\:text-white:focus {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.focus\:text-gray-700:focus {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
@@ -10866,6 +10899,9 @@ code[class*="language-"],
   .xl\:w-full {
     width: 100%;
   }
+  .xl\:w-96 {
+    width: 24rem;
+  }
   .xl\:max-w-\[180px\] {
     max-width: 180px;
   }
@@ -11436,9 +11472,6 @@ code[class*="language-"],
   .md\:-mt-\[5px\] {
     margin-top: -5px;
   }
-  .md\:mt-3 {
-    margin-top: 0.75rem;
-  }
   .md\:mt-\[-0\.125rem\] {
     margin-top: -0.125rem;
   }
@@ -11507,9 +11540,6 @@ code[class*="language-"],
   }
   .md\:max-w-\[70\%\] {
     max-width: 70%;
-  }
-  .md\:max-w-\[80\%\] {
-    max-width: 80%;
   }
   .md\:flex-row {
     flex-direction: row;
@@ -11945,9 +11975,6 @@ code[class*="language-"],
   }
   .sm\:min-w-\[38px\] {
     min-width: 38px;
-  }
-  .sm\:max-w-\[100\%\] {
-    max-width: 100%;
   }
   .sm\:max-w-\[75\%\] {
     max-width: 75%;
