--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -90,6 +90,10 @@ if(emailApp)
     // emailApp js
     script(src="../../assets/js/email-app/email-app-page.js")
 
+if(ecommerce)
+    // ecommerce js
+    script(src="../../assets/js/email-app/ecommerce-app-page.js")
+
 if(otp)
     // otp js
     script(src="../../assets/js/otp.js")
