--- a/assets/pug/pages/unique/reset-password.pug
+++ b/assets/pug/pages/unique/reset-password.pug
@@ -36,7 +36,7 @@ html(lang='en')
                                     a(href="https://twitter.com/i/flow/login" class="flex items-center justify-center gap-1 btn !text-twitter")
                                         i.fa-brands.fa-twitter
                                         |   Twitter
-                                    a(href="https://www.facebook.com/" class="flex items-center justify-center gap-1 btn instagram !text-instagram")
+                                    a(href="https://www.instagram.com/accounts/login/" class="flex items-center justify-center gap-1 btn instagram !text-instagram")
                                         svg(width='0' height='0')
                                             radialgradient#rg(r='150%' cx='30%' cy='107%')
                                                 stop(stop-color='#fdf497' offset='0')
