--- a/assets/postcss/components/_modal.css
+++ b/assets/postcss/components/_modal.css
@@ -3,9 +3,8 @@
   ==========================*/
 
 @layer components {
-
   .modal-main {
-    input[type='checkbox'] {
+    input[type="checkbox"] {
       display: none;
     }
 
@@ -14,7 +13,7 @@
     }
 
     .modal {
-      @apply fixed m-auto invisible bg-white z-20 rounded border-primary-light transition-transform ease-linear top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 peer-checked:visible peer-checked:opacity-100;
+      @apply fixed m-auto invisible bg-white z-20 rounded border-primary-light transition ease-linear top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 peer-checked:visible peer-checked:opacity-100;
 
       &.modal-center {
         @apply top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2;
@@ -63,9 +62,9 @@
           @apply left-0 right-0 w-auto h-[18.75rem] overflow-auto px-2;
         }
 
-        .modal-img{
-            display: flex;
-            justify-content: center;
+        .modal-img {
+          display: flex;
+          justify-content: center;
         }
       }
 
@@ -75,13 +74,13 @@
     }
 
     .theme-form {
-      input[type='checkbox'] {
+      input[type="checkbox"] {
         display: block;
       }
     }
 
-    .avatar{
-      img{
+    .avatar {
+      img {
         @apply object-fill;
       }
     }
@@ -90,5 +89,4 @@
   .button-label {
     @apply inline-block p-2 text-white text-xs font-bold cursor-pointer rounded w-fit;
   }
-
 }
