--- a/assets/postcss/pages/_ecommerce.css
+++ b/assets/postcss/pages/_ecommerce.css
@@ -2,6 +2,33 @@
     Ecommerce CSS
   ==========================*/
 @layer components {
+  .product-modal {
+    .product-slider {
+      .swiper {
+        &.productImg {
+          .swiper-wrapper {
+            .swiper-slide {
+              @apply opacity-50;
+              &.swiper-slide-thumb-active {
+                @apply opacity-100;
+              }
+            }
+          }
+        }
+      }
+    }
 
-    
+    .social {
+      a {
+        @apply bg-gray-extralight p-3 rounded-full;
+      }
+    }
+  }
+
+  .shop-sidebar {
+    @apply sm:w-[16.875rem] xl:opacity-0 xl:invisible xl:absolute xl:left-[-19.375rem] xl:top-0 xl:transition-all xl:z-[4] xl:duration-1000 xl:translate-x-[-19.375rem] xl:ease-in-out;
+    &.show {
+      @apply opacity-100 visible absolute top-0 left-0 z-[4] transition-all duration-1000 translate-x-0 ease-in-out;
+    }
+  }
 }
