--- a/assets/pug/pages/unique/shop.pug
+++ b/assets/pug/pages/unique/shop.pug
@@ -13,6 +13,9 @@
 //- ecommerce
 -var ecommerce = true;
 
+//- swiper-slider
+-var swiper=true;
+
 //- customizer 
 -var customizer = true;
 
@@ -59,16 +62,19 @@ html(lang='en')
                                     option(value='2') Price Low
                                     option(value='3') Price Hight
                             div.flex.items-center.gap-3
-                                div.product-filter
-                                    +SVG_ICON("Filter", "w-6 h-6 stroke-content3 xl:block hidden")
+                                div.product-filter 
+                                    +SVG_ICON("Filter", "w-6 h-6 stroke-content3 xl:block hidden shop-toggle")
                                 div.product-setting 
                                     i(data-feather="grid" class="w-6 h-6 stroke-content3")
                                 div.product-setting 
                                     i(data-feather="list" class="w-6 h-6 stroke-content3")
-                        div.col-span-3(class="xl:hidden")
+                        div.col-span-3(class="shop-sidebar")
                             div.card.sticky.top-0(class="product-filter")
                                 div.card-header 
-                                    h2(class="font-bold text-title") Filters
+                                    div.flex.items-center.justify-between(class="w-full") 
+                                        h2(class="font-bold text-title") Filters
+                                        button(class="p-1 rounded-full sm:p-1 shop-close-sidebar hidden xl:block")
+                                            i(class="w-4 h-4" data-feather="x")
                                 div.card-body.flex.flex-col.gap-1
                                     div.flex.flex-col.flex-wrap.gap-2
                                         div.accordionWrapper
@@ -248,13 +254,142 @@ html(lang='en')
                             .grid.grid-cols-12.gap-6(class="sm:mt-5") 
                                 each data in PRODUCT_BOX
                                     div.col-span-3(class='4xl:col-span-4 md:col-span-6 sm:col-span-12')
-                                        +product(data,"modal")
+                                        +product(data,"modal", "productmodal")
 
                     // Page Body End  
                     +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
-            include ../../components/customizer                        
+            include ../../components/customizer                   
+
+            //- Product View Modal
+            div.modal-main
+                input#productmodal(class="peer" name="productmodal" type='checkbox')
+                label.modal-overlay(class="peer-checked:block" for='productmodal')
+                div.modal.modal-center(class="peer-checked:opacity-100 peer-checked:visible !duration-75")
+                    //- div.modal-header
+                    //-     h3 Hurry !!
+                    //-     label(for='productmodal') 
+                    //-         i(data-feather="x" class="w-4 h-4 stroke-dark")
+                    div.modal-body.product-modal
+                        div.grid.grid-cols-12.gap-card-gap(class="md:max-w-[80%] sm:max-w-[100%] mx-auto")
+                            .col-span-6(class="md:col-span-12")             
+                                div.product-slider
+                                    .swiper.productImgNav
+                                        .swiper-wrapper
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/18.jpg" alt="product")
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/17.jpg" alt="product")
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/19.jpg" alt="product")
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/20.jpg" alt="product")
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/21.jpg" alt="product")
+                                        .swiper-button-next(class="text-primary")
+                                        .swiper-button-prev(class="text-primary")
+                                    .swiper.productImg( class="mt-4 md:mt-3")
+                                        .swiper-wrapper
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/18.jpg" alt="product")
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/17.jpg" alt="product")
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/19.jpg" alt="product")
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/20.jpg" alt="product")
+                                            .swiper-slide
+                                                img(src="../../assets/images/ecommerce/21.jpg" alt="product")
+
+                            .col-span-6(class="md:col-span-12 md:mt-5")  
+                                div.flex.justify-between
+                                    h3.leading-none(class="font-semibold 3xl:flex 3xl:justify-between 3xl:items-center lg:text-xl text-primary") Casual Men's t-shirt
+                                    div.flex.gap-2.items-center 
+                                        //- i.fa-solid.fa-share(class="w-4 h-4 text-content3")
+                                        //- span.text-content3.text-sm Share
+                                        label(for='productmodal') 
+                                            i(data-feather="x" class="w-4 h-4 stroke-dark cursor-pointer")
+                                span.text-content3.text-xs.leading-none #15704                  
+                                p.text-content3.text-xs.leading-none Currently in stock    
+                                h4(class="font-semibold text-title lg:text-lg my-2") $500 
+                                    del(class="text-danger") $350 
+                                div.flex.items-center.gap-2
+                                    div.flex.items-center.gap-0
+                                        i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
+                                        i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
+                                        i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
+                                        i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
+                                        i(data-feather="star" class="w-4 h-4 fill-content stroke-transparent")
+                                    label(for="4above").text-content3.text-xs.font-semibold 1059 ratings
+                                p.text-content3.text-sm.mt-1 This Men's Oversize T-Shirt is ideal for daily wear or for college because it is incredibly cool and cosy.
+                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
+                                div.flex.items-center.gap-3
+                                    label.text-title.text-sm.font-medium(class="min-w-[80px]" for="color") Color
+                                    ul(class="flex flex-wrap gap-2 items-center" id="color")
+                                        li(class="w-6 h-6 bg-light rounded-full cursor-pointer")
+                                        li(class="w-6 h-6 bg-black rounded-full cursor-pointer")
+                                        li(class="w-6 h-6 bg-warning rounded-full cursor-pointer")
+                                        li(class="w-6 h-6 bg-danger rounded-full cursor-pointer")
+                                        li(class="w-6 h-6 bg-info rounded-full cursor-pointer")
+                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
+                                div.flex.items-center.gap-3
+                                    label.text-title.text-sm.font-medium(for="qty" class="min-w-[80px]") Quantity   
+                                    select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px] w-max' id="qty" aria-label='Default select example')
+                                        option(selected='') 1
+                                        option(value='1') 2
+                                        option(value='2') 3
+                                        option(value='3') 4
+                                        option(value='3') 5
+                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
+                                div.flex.items-center.gap-3
+                                    label.text-title.text-sm.font-medium(for="size" class="min-w-[80px]") Sizes   
+                                    div.flex.items-center
+                                        button.btn.btn-md.border.border-border-light.rounded-none.text-title.leading-none(class="hover:bg-gray-extralight") S 
+                                        button.btn.btn-md.btn-active.text-title.leading-none.border.border-border-light.bg-gray-extralight.rounded-none(class="hover:bg-gray-extralight") M
+                                        button.btn.btn-md.border.border-border-light.rounded-none.text-title.leading-none(class="hover:bg-gray-extralight") L
+                                        button.btn.btn-md.border.border-border-light.rounded-none.text-title.leading-none(class="hover:bg-gray-extralight") XL
+                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
+                                //- div.flex.items-center.justify-between
+                                div.social.flex.gap-3.items-center
+                                    a(href="https://www.linkedin.com/login" class="!text-linkedin")
+                                        i.fa-brands.fa-linkedin-in(class="w-5 h-5")
+                                    a(href="https://twitter.com/i/flow/login" class="!text-twitter")
+                                        i.fa-brands.fa-twitter(class="w-5 h-5")
+                                    a(href="https://www.whatsapp.com/" class="!text-success")
+                                        i.fa-brands.fa-whatsapp(class="w-5 h-5")
+                                    a(href="https://www.facebook.com/" class="!text-facebook")
+                                        i.fa-brands.fa-facebook(class="w-5 h-5")
+                                    a(href="https://www.instagram.com/accounts/login/" class="instagram")
+                                        svg(width='0' height='0')
+                                            radialgradient#rg(r='150%' cx='30%' cy='107%')
+                                                stop(stop-color='#fdf497' offset='0')
+                                                stop(stop-color='#fdf497' offset='0.05')
+                                                stop(stop-color='#fd5949' offset='0.45')
+                                                stop(stop-color='#d6249f' offset='0.6')
+                                                stop(stop-color='#285AEB' offset='0.9')
+                                        i.fa-brands.fa-instagram(class="w-5 h-5")
+                                    //- div.flex.gap-2.items-center 
+                                    //-     i.fa-solid.fa-share(class="w-3 h-3 text-content3")
+                                    //-     span.text-title.text-sm.font-medium Share
+                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
+                                div.flex.flex-wrap.gap-2.items-center.capitalize 
+                                    a(href="cart.html").btn.btn-primary.text-white.text-sm Add to cart         
+                                    a(href="wishlist.html").btn.btn-secondary.text-white.text-sm Add to wishlist         
+                                    a(href="checkout.html").btn.btn-warning.text-white.text-sm Buy it now         
+
+                            
+                                                   
+                                //- p.mt-3.text-gray-500 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that.
+
+
+
+                    
+                    //- label(for="productmodal").btn.btn-danger.p-2.text-white Close
+
+
+
 
     include ../../layout/footer-files
+
 
 
     
